sumo/tests/dfrouter/errors/network/edge/cedge/root__edge__cedge#id__empty1/errors.dfrouter
Error: Missing id of a 'cedge'-object.
Quitting (on error).
